--- a/add.css
+++ b/add.css
@@ -108,3 +108,45 @@ input[type="submit"]:hover {
     gap: 10px;
     margin-bottom: 20px;
 }
+
+.snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #d9d9d9;
+    color: #303030;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    top: 30px; /* Changed from 'bottom: 30px;' to 'top: 30px;' */
+    font-size: 17px;
+}
+
+.snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {top: 0; opacity: 0;} /* Changed from 'bottom: 0;' to 'top: 0;' */
+    to {top: 30px; opacity: 1;} /* Changed from 'bottom: 30px;' to 'top: 30px;' */
+}
+
+@keyframes fadein {
+    from {top: 0; opacity: 0;} /* Changed from 'bottom: 0;' to 'top: 0;' */
+    to {top: 30px; opacity: 1;} /* Changed from 'bottom: 30px;' to 'top: 30px;' */
+}
+
+@-webkit-keyframes fadeout {
+    from {top: 30px; opacity: 1;} /* Changed from 'bottom: 30px;' to 'top: 30px;' */
+    to {top: 0; opacity: 0;} /* Changed from 'bottom: 0;' to 'top: 0;' */
+}
+
+@keyframes fadeout {
+    from {top: 30px; opacity: 1;} /* Changed from 'bottom: 30px;' to 'top: 30px;' */
+    to {top: 0; opacity: 0;} /* Changed from 'bottom: 0;' to 'top: 0;' */
+}
