--- a/enr.css
+++ b/enr.css
@@ -109,6 +109,17 @@ input[type="submit"]:hover {
     margin-bottom: 20px;
 }
 
+select {
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    margin-bottom: 10px;
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    background-color: #d9d9d9;
+    color: #212121;
+}
+
 .snackbar {
     visibility: hidden;
     min-width: 250px;
