--- a/static/css/student-dashboard.css
+++ b/static/css/student-dashboard.css
@@ -15,11 +15,10 @@
     --text-color: #707070;
 
     /* Transitions */
-    --tran-03: all 0.2s ease;
+    --tran-02: all 0.2s ease;
     --tran-03: all 0.3s ease;
     --tran-04: all 0.4s ease;
     --tran-05: all 0.5s ease;
-
 }
 
 body{
@@ -32,7 +31,7 @@ body{
 .sidebar .text{
     font-size: 16px;
     font-weight: 500;
-    color: var(--sidebar-color);
+    color: var(--text-color);
 }
 
 .sidebar .image{
@@ -53,9 +52,32 @@ body{
     background: var(--sidebar-color);
 }
 
+.sidebar li{
+    height: 50px;
+    margin-top: 10px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar li .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 60px;
+    font-size: 20px;
+}
+
+.sidebar li .icon, .sidebar li.text{
+    color: var(--text-color);
+    transition: var(--tran-02);
+}
+
 .sidebar header{
     position: relative;
 }
+
+
 
 .sidebar .image-text img{
     width: 40px;
@@ -93,6 +115,36 @@ header .image-text .header-text{
     justify-content: center;
     border-radius: 50%;
     color: var(--sidebar-color);
-    font-size: 22px;
+    font-size: 20px;
 }
 
+.sidebar .search-box{
+    background: var(--primary-color-light);
+}
+
+.search-box input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 6px;
+    background: var(--primary-color-light);
+}
+
+.sidebar li a{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    border-radius: 6px;
+    transition: var(--tran-04);
+}
+
+.sidebar li a:hover{
+    background: var(--primary-color);
+}
+
+.sidebar li a:hover .icon, .sidebar li a:hover .text{
+    color: var(--sidebar-color);
+}
