--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -16,7 +16,7 @@ body {
 }
 
 .wrapper {
-    width: 450px;
+    width: 500px;
     background-color: #202020;
     border-top: 2px solid #3b3b3b;
     color: #e1e1e1;
@@ -26,6 +26,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 20px; /* Adds uniform spacing between elements */
+    height: auto;
 }
 
 .wrapper img.logo {
@@ -40,33 +41,29 @@ body {
 
 .wrapper h1 {
     text-align: center;
-    margin-bottom: 50px;
-    font-size: 24px;
+    margin-bottom: 30px;
+    font-size: 20px;
     font-weight: 400;
 }
 
 .wrapper h2 {
     font-size: 28px;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     font-weight: 600;
 }
 
 .wrapper .input-box {
     position: relative;
-    width: 350px;
+    width: 100%; /* Set the width to fill the container */
     height: 45px;
-    margin: 15px 0;
+    margin-bottom: 10px; /* Adjust the margin for better spacing */
     background-color: #161616;
     border-radius: 10px;
     display: flex;
     align-items: center;
     padding: 0 10px;
     border: 1px solid #252525;
-}
-
-.wrapper .input-box{
-    box-shadow: inset 0 0 0 1px #252525;
 }
 
 .input-box i {
@@ -89,6 +86,24 @@ body {
     font-weight: 500;
 }
 
+.no-acc {
+    text-align: center;
+    font-size: 12px;
+    color: #8B8B8B;
+    margin-bottom: 30px;
+    font-weight: 500;
+}
+
+.no-acc a {
+    text-decoration: none;
+    color: #e1e1e1;
+}
+
+.no-acc a:hover {
+    color: steelblue;
+    transition: ease-in 0.3s;
+}
+
 .input-box input::placeholder {
     color: #8b8b8b;
     font-size: 15px;
@@ -96,7 +111,7 @@ body {
 }
 
 .wrapper .btn {
-    width: 350px; /* Set the width of the button */
+    width: 100%; /* Set the width to fill the container */
     height: 45px;
     background: #e1e1e1;
     border: none;
@@ -105,43 +120,19 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     font-size: 15px;
-    color: #333;
+    color: #212121;
     font-weight: 700;
+    margin-top: 20px; /* Add margin to space out the button from the input boxes */
 }
 
-.wrapper .remember-forgot {
-    display: flex;
-    justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
-}
-
-.remember-forgot label input {
-    accent-color: #e1e1e1;
-    margin-right: 3px;
-}
-
-.remember-forgot a {
+.wrapper .btn:hover {
+    background-color: #353535;
     color: #e1e1e1;
-    text-decoration: none;
+    transition: ease-in 0.3s;
 }
 
-.remember-forgot a:hover {
-    text-decoration: underline;
-}
-
-.wrapper .register-link {
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
-}
-
-.register-link p a {
-    color: #e1e1e1;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.register-link p a:hover {
-    text-decoration: underline;
+.label{
+    font-size: 15px;
+    font-weight: 500;
+    margin-bottom: 5px;
 }
