--- a/static/css/student-dashboard.css
+++ b/static/css/student-dashboard.css
@@ -24,6 +24,25 @@
 body{
     height: 100vh;
     background: var(--body-color);
+    transition: var(--tran-05);
+}
+
+body.dark{
+    --body-color: #18191A;
+    --sidebar-color: #242526;
+    --primary-color: #3A3B3C;
+    --primary-color-light: #3A3B3C;
+    --toggle-color: #FFF;
+    --text-color: #ccc;
+}
+
+
+.sidebar.close{
+    width: 88px;
+}
+
+.sidebar.close .text{
+    opacity: 0;
 }
 
 /* reusable css */
@@ -32,12 +51,16 @@ body{
     font-size: 16px;
     font-weight: 500;
     color: var(--text-color);
+    transition: var(--tran-04);
+    white-space: nowrap;
+    opacity: 1;
 }
 
 .sidebar .image{
     min-width: 60px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 /* sidebar */
@@ -50,6 +73,8 @@ body{
     width: 250px;
     padding: 10px 14px;
     background: var(--sidebar-color);
+    transition: var(--tran-05);
+    z-index: 100;
 }
 
 .sidebar li{
@@ -76,8 +101,6 @@ body{
 .sidebar header{
     position: relative;
 }
-
-
 
 .sidebar .image-text img{
     width: 40px;
@@ -106,7 +129,7 @@ header .image-text .header-text{
     position: absolute;
     top: 50%;
     right: -25px;
-    transform: translateY(-50%);
+    transform: translateY(-50%) rotate(180deg);
     height: 25px;
     width: 25px;
     background: var(--primary-color);
@@ -116,19 +139,43 @@ header .image-text .header-text{
     border-radius: 50%;
     color: var(--sidebar-color);
     font-size: 20px;
+    transition: var(--tran-03);
+}
+
+body.dark .sidebar header .toggle{
+    color: var(--text-color);
+}
+
+.sidebar.close header .toggle{
+    transform: translateY(-50%);
+}
+
+body.dark .sidebar li a:hover .icon,
+body.dark .sidebar li a:hover .text{
+    color: var(--text-color);
+}
+
+.sidebar .menu{
+    margin-top: 35px;
 }
 
 .sidebar .search-box{
     background: var(--primary-color-light);
+    border-radius: 10px;
+    transition: var(--tran-05);
 }
 
 .search-box input{
     height: 100%;
     width: 100%;
+    font-size: 16px;
+    font-weight: 500;
     outline: none;
     border: none;
     border-radius: 6px;
     background: var(--primary-color-light);
+    border-radius: 10px;
+    transition: var(--tran-05);
 }
 
 .sidebar li a{
@@ -147,4 +194,100 @@ header .image-text .header-text{
 
 .sidebar li a:hover .icon, .sidebar li a:hover .text{
     color: var(--sidebar-color);
+}
+
+.body.dark .menu-bar .mode i.sun{
+    opacity: 1;
+}
+
+.body.dark .menu-bar .mode i.moon{
+    opacity: 0;
+}
+
+
+.sidebar .menu-bar{
+    height: calc(100% - 50px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.menu-bar .mode{
+    position: relative;
+}
+
+.menu-bar .mode .moon-sun{
+    height: 50px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+
+}
+
+.menu-bar .mode i{
+    position: absolute;
+    transition: var(--tran-03);
+}
+
+.menu-bar .mode i.sun{
+    opacity: 0;
+}
+
+.menu-bar .mode .toggle-switch{
+    position: absolute;
+    height: 100%;
+    min-width: 60px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    background: var(--primary-color-light);
+    right: 0;
+    border-radius: 10px;
+}
+
+.toggle-switch .switch{
+    position: relative;
+    height: 22px;
+    width: 44px;
+    border-radius: 25px;
+    background: var(--toggle-color);
+}
+
+.switch::before{
+    content: '';
+    position: absolute;
+    border-radius: 50%;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    height: 15px;
+    width: 15px;
+    background: var(--sidebar-color);
+    transition: var(--tran-03);
+}
+
+body.dark .switch::before{
+    left: 24px;
+}
+
+.home{
+    height: 100vh;
+    width: calc(100% - 250px);
+    background: var(--body-color);
+    position: relative;
+    left: 250px;
+    transition: var(--tran-05);
+}
+
+.sidebar.close ~ .home{
+    left: 88px;
+    width: calc(100% - 88px);
+}
+
+.home .text{
+    font-size: 30px;
+    font-weight: 500;
+    color: var(--text-color);
+    padding: 8px 40px;
 }
