--- a/static/css/student-account.css
+++ b/static/css/student-account.css
@@ -307,23 +307,18 @@ body.dark .switch::before{
     height: 90vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .card1{
     width: 100%;
-    height: 48%;
+    height: auto;
     background: var(--card-bg-color);
     border-radius: 10px;
     padding: 20px;
-}
-
-.card2{
-    width: 100%;
-    height: 48%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .content{
@@ -343,6 +338,7 @@ body.dark .switch::before{
     font-size: 30px;
     font-weight: 600;
     color: var(--text-color);
+    margin-bottom: 20px;
 }
 
 .wrapper .body-text{
@@ -350,16 +346,12 @@ body.dark .switch::before{
     color: var(--text-color);
 }
 
-.wrapper .card1{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
 .wrapper .bold{
     font-weight: 600;
+    text-align: left;
+    font-size: 18px;
+    color: var(--text-color);
     background: var(--body-color);
-    width: 20%;
 }
 
 .value{
@@ -383,4 +375,22 @@ table {
 th, td {
     padding: 12px;
     border: 1px solid var(--text-color);
+    text-align: left;
+}
+
+.button{
+    text-align: center;
+}
+
+.edit{
+    padding: 10px;
+    font-size: 15px;
+    border: none;
+    font-weight: 600;
+    border-radius: 10px;
+    width: 80px;
+}
+
+.edit:hover{
+    cursor: pointer;
 }
