--- a/static/css/student-grades.css
+++ b/static/css/student-grades.css
@@ -316,7 +316,6 @@ body.dark .switch::before{
     background: var(--card-bg-color);
     border-radius: 10px;
     padding: 20px;
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
 }
@@ -373,5 +372,5 @@ table {
 th, td {
     padding: 12px;
     border: 1px solid var(--text-color);
-    text-align: center;
+    text-align: left;
 }
