--- a/static/css/student-account.css
+++ b/static/css/student-account.css
@@ -308,10 +308,11 @@ body.dark .switch::before{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .card1{
-    width: 100%;
+    width: 40%;
     height: auto;
     background: var(--card-bg-color);
     border-radius: 10px;
@@ -319,6 +320,7 @@ body.dark .switch::before{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    gap: 5px;
 }
 
 .content{
@@ -351,7 +353,6 @@ body.dark .switch::before{
     text-align: left;
     font-size: 18px;
     color: var(--text-color);
-    background: var(--body-color);
 }
 
 .value{
@@ -393,4 +394,74 @@ th, td {
 
 .edit:hover{
     cursor: pointer;
+}
+
+form{
+    gap: 5px;
+}
+
+form input[type="text"]{
+    width: 100%;
+    margin-bottom: 10px;
+}
+input{
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid var(--text-color);
+    font-weight: 600;
+    padding: 3px;
+    font-size: 15px;
+}
+
+button{
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid var(--text-color);
+    font-size: 15px;
+    padding: 3px;
+    font-weight: 500;
+    width: 100%;
+}
+
+/* Snackbar CSS */
+#snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    font-size: 17px;
+}
+
+#snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
 }
