--- a/static/css/registrar-management.css
+++ b/static/css/registrar-management.css
@@ -303,15 +303,28 @@ body.dark .switch::before{
 }
 
 .home .wrapper{
-    width: 30%;
-    height: 90vh;
+    width: 80%;
+    height: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
+    gap: 20px;
 }
 
 .card1{
-    width: 100%;
+    width: 50%;
+    height: auto;
+    background: var(--card-bg-color);
+    border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: space-evenly;
+}
+
+.card2{
+    width: 50%;
     height: auto;
     background: var(--card-bg-color);
     border-radius: 10px;
@@ -402,5 +415,64 @@ th, td {
     width: 100%;
     height: 30px;
     border-radius: 5px;
+}
+
+select{
+    border-radius: 5px;
+    font-size: 15px;
+}
+
+form{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card .input, .buttons, select{
+    height: 30px;
+}
+
+/* Snackbar CSS */
+#snackbar {
+    visibility: hidden; /* Hidden by default */
+    min-width: 250px; /* Set a default minimum width */
+    margin-left: -125px; /* Center the snackbar */
+    background-color: #333; /* Black background color */
+    color: #fff; /* White text color */
+    text-align: center; /* Centered text */
+    border-radius: 2px; /* Rounded borders */
+    padding: 16px; /* Some padding */
+    position: fixed; /* Sit on top of the screen */
+    z-index: 1; /* Add a z-index if needed */
+    left: 50%; /* Center the snackbar */
+    bottom: 30px; /* 30px from the bottom */
+    font-size: 17px; /* Increase font size */
+}
+
+#snackbar.show {
+    visibility: visible; /* Show the snackbar */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s; /* Fade in and out */
+    animation: fadein 0.5s, fadeout 0.5s 2.5s; /* Fade in and out */
+}
+
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
 }
 
